--- a/timperial/pubspec.yaml
+++ b/timperial/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -25,6 +25,11 @@ dependencies:
   cloud_firestore: ^0.12.9 #+5
   firebase_storage: ^3.1.5
   google_fonts: ^0.6.2
+  fluttertoast: ^4.0.0
+  flip_card: ^0.4.4
+  image_picker: ^0.6.5
+  image_cropper: ^1.3.1
+  flutter_image_compress: ^0.6.8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -47,9 +52,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - assets/login_page_background.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
