--- a/timperial/pubspec.yaml
+++ b/timperial/pubspec.yaml
@@ -29,8 +29,9 @@ dependencies:
   flip_card: ^0.4.4
   image_picker: ^0.6.5
   image_cropper: ^1.3.1
-  flutter_image_compress: ^0.7.0
+  # flutter_image_compress: ^0.7.0
   carousel_slider: ^2.3.1
+  flutter_native_image: ^0.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
