--- a/timperial/pubspec.yaml
+++ b/timperial/pubspec.yaml
@@ -44,7 +44,7 @@ dev_dependencies:
 
 flutter_icons:
   android: "launcher_icon"
-  ios: true
+  ios: "launcher_icon"
   image_path: "assets/icon/timperial_logo.png"
 
 # For information on the generic Dart part of this file, see the
