--- a/timperial/pubspec.yaml
+++ b/timperial/pubspec.yaml
@@ -44,8 +44,8 @@ dev_dependencies:
 
 flutter_icons:
   android: "launcher_icon"
-  ios: false
-  image_path: "assets/icon/timperial_logo.png"
+  ios: "launcher_icon"
+  image_path: "assets/icon/timperial_logo_no_alpha.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
